--- a/SCRAPING GIALLO ZAFFERANO.ipynb
+++ b/SCRAPING GIALLO ZAFFERANO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "160e759b",
    "metadata": {},
    "outputs": [],
@@ -19,20 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "24f6af79",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Non ci sono più pagine da processare.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chrome_options = webdriver.ChromeOptions()\n",
     "chrome_options.add_argument(\"--disable-notifications\")\n",
@@ -40,7 +32,7 @@
     "driver = webdriver.Chrome(options=chrome_options)\n",
     "\n",
     "try:\n",
-    "    driver.get('https://www.giallozafferano.it/ricette-cat/page450')\n",
+    "    driver.get('https://www.giallozafferano.it/ricette-cat/')\n",
     "\n",
     "    # Attendimo l'eventuale popup dei cookie\n",
     "    try:\n",
@@ -131,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "18d82d32",
    "metadata": {},
    "outputs": [],
@@ -221,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fa60273e",
    "metadata": {},
    "outputs": [],
