--- a/SCRAPING GIALLO ZAFFERANO.ipynb
+++ b/SCRAPING GIALLO ZAFFERANO.ipynb
@@ -10,9 +10,7 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
-    "from bs4 import BeautifulSoup\n",
-    "import requests\n",
+    "from selenium.webdriver.support import expected_conditions as E\n",
     "import time\n",
     "import pandas as pd"
    ]
