--- a/Scraping_gz.ipynb
+++ b/Scraping_gz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "160e759b",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,9 @@
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "import time\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import requests\n",
+    "from io import StringIO"
    ]
   },
   {
@@ -121,14 +123,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9a2249c4",
+   "execution_count": 16,
+   "id": "e07f8f52",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the URL of the CSV file\n",
+    "url = 'https://raw.githubusercontent.com/andrecardinali/dataman/main/Ricette.csv'\n",
+    "\n",
+    "# Get the content of the URL\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "# Decode the content to a string\n",
+    "data = StringIO(response.text)\n",
+    "\n",
+    "# Read the CSV data from the string\n",
+    "ricette = pd.read_csv(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9a2249c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>titolo</th>\n",
+       "      <th>categoria</th>\n",
+       "      <th>ingredienti</th>\n",
+       "      <th>ingredienti_dict</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Budino al gianduia con salsa all'arancia</td>\n",
+       "      <td>DOLCI</td>\n",
+       "      <td>[Panna fresca liquida 150 g, Amido di mais (ma...</td>\n",
+       "      <td>{'Panna fresca liquida': '150 g', 'Amido di ma...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sfogliatine di pere con Nutella®</td>\n",
+       "      <td>DOLCI</td>\n",
+       "      <td>[Nutella® 75 g, Pere Williams 1, Pasta Sfoglia...</td>\n",
+       "      <td>{'Nutella®': '75 g', 'Pere Williams': '1', 'Pa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Monodose natalizia</td>\n",
+       "      <td>DOLCI</td>\n",
+       "      <td>[Burro a temperatura ambiente 100 g, Zucchero ...</td>\n",
+       "      <td>{'Burro a temperatura ambiente': '100 g', 'Zuc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Polpettine mostruose</td>\n",
+       "      <td>SECONDI PIATTI</td>\n",
+       "      <td>[Ricotta di vaccina 175 gr, Parmigiano Reggian...</td>\n",
+       "      <td>{'Ricotta di vaccina': '175 gr', 'Parmigiano R...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Friselle con cotechino e lenticchie</td>\n",
+       "      <td>ANTIPASTI</td>\n",
+       "      <td>[Friselle da 30 grammi ciascuna 4, Cotechino p...</td>\n",
+       "      <td>{'Friselle da 30 grammi ciascuna': '4', 'Cotec...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     titolo       categoria  \\\n",
+       "0  Budino al gianduia con salsa all'arancia           DOLCI   \n",
+       "1          Sfogliatine di pere con Nutella®           DOLCI   \n",
+       "2                        Monodose natalizia           DOLCI   \n",
+       "3                      Polpettine mostruose  SECONDI PIATTI   \n",
+       "4       Friselle con cotechino e lenticchie       ANTIPASTI   \n",
+       "\n",
+       "                                         ingredienti  \\\n",
+       "0  [Panna fresca liquida 150 g, Amido di mais (ma...   \n",
+       "1  [Nutella® 75 g, Pere Williams 1, Pasta Sfoglia...   \n",
+       "2  [Burro a temperatura ambiente 100 g, Zucchero ...   \n",
+       "3  [Ricotta di vaccina 175 gr, Parmigiano Reggian...   \n",
+       "4  [Friselle da 30 grammi ciascuna 4, Cotechino p...   \n",
+       "\n",
+       "                                    ingredienti_dict  \n",
+       "0  {'Panna fresca liquida': '150 g', 'Amido di ma...  \n",
+       "1  {'Nutella®': '75 g', 'Pere Williams': '1', 'Pa...  \n",
+       "2  {'Burro a temperatura ambiente': '100 g', 'Zuc...  \n",
+       "3  {'Ricotta di vaccina': '175 gr', 'Parmigiano R...  \n",
+       "4  {'Friselle da 30 grammi ciascuna': '4', 'Cotec...  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "def parse_ingredient(ingredient):\n",
     "    parts = ingredient.split()\n",
-    "    if len(parts) > 2 and (parts[-2].isdigit() and parts[-1] in ['g', 'ml', 'l', 'kg', 'cl']):\n",
+    "    if len(parts) > 2 and (parts[-2].isdigit() and parts[-1] in ['g', 'ml', 'l', 'kg', 'cl', 'gr']):\n",
     "        quantity = ' '.join(parts[-2:])\n",
     "        name = ' '.join(parts[:-2])\n",
     "    else:\n",
@@ -162,26 +279,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56332a6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
-    "def separa_nome_quantita(ingrediente):\n",
-    "    pattern = re.compile(r'^(.*?)(\\d+\\s*[a-zA-Z]+)$')\n",
-    "    match = pattern.match(ingrediente)\n",
-    "    if match:\n",
-    "        nome = match.group(1).strip()\n",
-    "        quantita = match.group(2).strip()\n",
-    "        return nome, quantita\n",
-    "    else:\n",
-    "        return ingrediente, ''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f7ffa321",
    "metadata": {},
    "outputs": [],
@@ -207,16 +304,6 @@
    "outputs": [],
    "source": [
     "ricette.to_json('Ricette.json', orient='records', lines=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "713f68c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.read_json('ricette.json', lines=True)"
    ]
   }
  ],
