--- a/Scraping_gz.ipynb
+++ b/Scraping_gz.ipynb
@@ -18,6 +18,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a09c212",
+   "metadata": {},
+   "source": [
+    "## Scraping Giallo Zafferano"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "24f6af79",
@@ -114,14 +122,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3772f130",
-   "metadata": {},
-   "source": [
-    "# Prove"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "e07f8f52",
@@ -139,6 +139,14 @@
     "\n",
     "# Read the CSV data from the string\n",
     "ricette = pd.read_csv(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02562da8",
+   "metadata": {},
+   "source": [
+    "## Creating a dictionary of the ingredients"
    ]
   },
   {
